# meta-agent

./: .env.example  .gitignore  .meta-agent-tasks.md  CLAUDE.md  README.md  meta-agent-claude-instructions.md  meta-agent.spec  perplexity_recommendations.md  prd.txt  pyproject.toml
.taskmaster/: config.json  state.json
.taskmaster/docs/: autonomous-loop-prd.md  grok-local-loop-prd.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
config/: loop_config.yaml  profiles.yaml  prompts.yaml  stage_candidates.yaml
config/prompt_library/: meta_error_fix.md  meta_feature_expansion.md  meta_prd_evaluation.md  meta_stage_triage.md  meta_triage.md
docs/: mvp_improvement_plan.md  prd.md  prompt_architecture.md
reports/: 01_coupling_cohesion.md  02_layer_identification.md  03_code_complexity.md  04_prd_conformance.md  05_refactoring_plan.md  06_error_analysis.md  07_impact_analysis.md  08_code_duplication.md
reviews/: analysis_alignment_review.md  codebase_digest_integration_analysis.json  hardening_plan.md  meta_agent_analysis.json  repomix-output-YallaPapi-meta-agent.xml
scripts/: build.py  install.bat  install.ps1
src/metaagent/: __init__.py  __main__.py  analysis.py  (+20 more)
tests/: __init__.py  conftest.py  test_analysis.py  test_claude_impl.py  test_claude_runner.py  test_cli.py  test_codebase_digest.py  test_codebase_digest_integration.py  test_config.py  test_grok_client.py  test_gui.py  test_license.py  test_local_manager.py  test_loop_integration.py  test_plan_writer.py  test_prompts.py  test_refinement_pipeline.py  test_strategies.py  test_task_manager.py  test_tokens.py  test_workspace_manager.py
(+35 files in other folders)
