[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metaagent"
version = "0.1.0"
description = "Meta-agent for automated codebase refinement from v0 to MVP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Developer" }
]
keywords = ["cli", "automation", "code-analysis", "llm", "refactoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "codebase-digest>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
metaagent = "metaagent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/metaagent"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/config",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
